i have created many recipies

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="recipes/dosa.html">Dosai</a>
+    <h1>Recipes</h1>
+    <ul>
+        <li><a href="recipes/dosa.html">Dosai</a></li>
+        <li><a href="recipes/dosa.html">Noodles</a></li>
+        <li><a href="recipes/dosa.html">idly</a></li>
+        <li><a href="recipes/dosa.html">sambar</a></li>
+        <li><a href="recipes/dosa.html">chutney</a></li>
+    </ul>
+
 </body>
 </html>
