--- a/recipes/dosa.html
+++ b/recipes/dosa.html
@@ -7,6 +7,51 @@
     <title>Document</title>
 </head>
 <body>
-    Dosai
+    <h1>Dosai</h1>
+    <img src="images/Dosai.png" alt="image of a Dosai">
+    <p>A dosa is a thin flat bread originating from South India, 
+        made from a fermented batter predominantly consisting of 
+        lentils and rice. It is somewhat similar to a crepe in 
+        appearance, although savoury flavours are generally 
+        emphasized (sweet variants also exist).</p>
+    <h3>ingredients:</h3>
+    <ul>
+        <li>1-1/2 cups long grain rice </li>
+        <li>1/2 cup urad dal (polished black lentil or white lentil)</li>
+        <li>3 quarts water </li>
+        <li>Salt</li>
+        <li>1 medium onion, chopped</li>
+        <li>1 - 2 green chilies, chopped</li>
+        <li>1 Tbs. ghee (clarified butter) or regular butter</li>
+        <li>1/2 tsp. black mustard seeds</li>
+        <li>1/2 tsp. chana dal (split black chickpeas)</li>
+        <li>1 sprig curry leaves</li>
+        <li>1/2 tsp. turmeric powder</li>
+        <li>2 large potatoes, boiled</li>
+        <li>8 oz. coconut, cilantro and tomato chutney (optional)</li>
+        <li>16 oz. sambar (vegetable lentil stew, optional) </li>
+    </ul>
+    <h3>steps:</h3>
+    <ol>
+        <li>Prepare Dosa Batter:Soak rice and urad dal in separate bowls for 4-6 hours. Strain. </li>
+        <li>Process rice and urad dal mixture in commercial grinder or food processor. While grinding, add water a cup at a time until it reaches the consistency of pancake batter. </li>
+        <li>Salt to taste.</li>
+        <li>Cover mixture and let sit overnight. Do not refrigerate; it needs to ferment. </li>
+        <li>Prepare Masala Dosa Filling: Add oil or ghee to a skillet. </li>
+        <li>Add mustard seeds and chana dal. </li>
+        <li>Shake mixture over the flame until golden brown. </li>
+        <li>Add curry leaves (whole leaf), green chiles, and onions. </li>
+        <li>Sprinkle turmeric powder and salt (for taste). Stir. </li>
+        <li>Break up boiled potato into small chunks and add them to your mixture. Add water and stir. </li>
+        <li>Prepare Masala Dosa: Pour refrigerated dosa mixture into a small bowl with a flat bottom. </li>
+        <li>Pour batter into a greased skillet.</li>
+        <li>Immediately, starting from the center, begin forming a circular shape with the batter using the flat-bottomed dish.</li>
+        <li>Brush on ghee (or regular butter) to frying dosa. </li>
+        <li>Place filling near the center of the dosa. </li>
+        <li>Lightly lift the edges of the dosa. </li>
+        <li>Begin rolling from the edge of the dosa as you would a wrap. </li>
+        <li>Remove dosa from hot top or skillet. </li>
+        <li>Masala Dosa is typically served with coconut, cilantro and tomato chutney as well as sambar (vegetable lentil stew)</li>
+    </ol>
 </body>
 </html>
